# vibe-coding-light

./: .gitignore  LICENSE  README.md  README_zh.md
client/: .env.example  pyproject.toml
client/scripts/: antigravity-signal-hook  claude-code-signal-hook  codex-signal-hook  signal-light
client/signal_light/: __init__.py  __main__.py  antigravity_hook.py  bark.py  claude_code_hook.py  cli.py  codex_hook.py  esp.py  hook_installer.py  logger.py  session_manager.py
client/tests/: test_agent_signals.py  test_cli.py  test_esp.py  test_logger.py  test_session_manager.py
docs/: wiring.md
firmware/: platformio.ini
firmware/include/: config.h
firmware/src/: main.cpp
